[package]
name = "pupynet"
version = "0.1.0"
edition = "2021"

[dependencies]
pupynet_core = { path = "../" }
tokio = { version = "1" }
clap = { version = "4", features = ["derive"] }
reqwest = "0.12"
serde_json = "1"
anyhow = "1"
homedir = "0.3"
log = "0.4"
simple_logger = "5"
flate2 = "1.0"
tar = "0.4"
rsa = { version = "0.9.7", features = ["pem"] }
sha2 = { version = "0.10", features = ["oid"] }